Update version to 2.2.5snap2-rc1
Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: darktable-kyrofa
-version: 2.2.5snap1
+version: 2.2.5snap2-rc1
 summary: Virtual lighttable and darkroom for photographers
 description: |
   Darktable is an open source photography workflow application and RAW
