Keep darktable-kyrofa
Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: darktable
+name: darktable-kyrofa
 version: 2.4.1snap1
 summary: Virtual lighttable and darkroom for photographers
 description: |
