--- a/snap/gui/darktable.desktop
+++ b/snap/gui/darktable.desktop
@@ -66,8 +66,8 @@ Keywords[sl]=grafika;fotografije;surove;
 Keywords[sq]=graphics;photography;raw;
 Keywords[sv]=grafik;fotografi;rå;
 
-Exec=darktable %U
-TryExec=darktable
+Exec=darktable-kyrofa.darktable %U
+TryExec=darktable-kyrofa.darktable
 Terminal=false
 StartupNotify=true
 
