snap: disable wayland
Signed-off-by: Sergio Schvezov <sergio.schvezov@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,6 +22,7 @@ apps:
     extensions: [gnome-3-38]
     environment:
       GTK_USE_PORTAL: 0
+      DISABLE_WAYLAND: 1
     plugs:
       - opengl
       - home
