--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Build snapcraft snap
       id: build-snapcraft
       uses: snapcore/action-build@v1
+      with:
+        snapcraft-channel: 7.x/candidate
     - name: Upload snapcraft snap
       uses: actions/upload-artifact@v2
       with:
