chore: track the candidate branch for ci
Signed-off-by: Sergio Schvezov <sergio.schvezov@canonical.com>

--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -2,9 +2,13 @@ name: snap
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - candidate
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - candidate
 
   workflow_dispatch:
 
